# ros2_mobile_manipulator

./: CMakeLists.txt  README.md  package.xml
ridgeback_description/: CMakeLists.txt  package.xml
ridgeback_description/launch/: description.launch.py
ridgeback_ur5_bringup/: CMakeLists.txt  package.xml
ridgeback_ur5_bringup/launch/: ridgeback_ur_bringup.launch.py  ridgeback_ur_moveit.launch.py
ridgeback_ur5_description/: CMakeLists.txt  package.xml
ridgeback_ur5_description/urdf/: ridgeback_ur5_description.urdf.xacro
ridgeback_ur5_gazebo/: CMakeLists.txt  package.xml
ridgeback_ur5_gazebo/config/: ros_gz_bridge.yaml  ur5_2f85_controllers.yaml  ur5_Controllers.yaml
ridgeback_ur5_gazebo/launch/: bringup.launch.py  bringup_gazebo.launch.py
ridgeback_ur5_gazebo/worlds/: pick_place.world
ridgeback_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ridgeback_ur5_moveit_config/config/: controllers.yaml  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ridgeback_ur5.ros2_control.xacro  ridgeback_ur5.urdf.xacro  ros2_controllers.yaml
ridgeback_ur5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ridgeback_ur5_moveit_config/ridgeback_ur5_moveit_config/: launch_common.py
ridgeback_ur5_moveit_config/srdf/: ridgeback_ur5.srdf.xacro
robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85.ros2_control.xacro  robotiq_2f_85_couple_macro.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
ur5_robotiq_description/: CMakeLists.txt  package.xml
ur5_robotiq_description/urdf/: ur.urdf.xacro  ur5_robotiq_85_gripper.urdf.xacro  ur5_robotiq_ros2_control.xacro  ur_macro.xacro
ur5_robotiq_description/urdf/robotiq_85/: robotiq_85.ros2_control.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
ur5_robotiq_description/urdf/ur5_2f85/: ur5.urdf.xacro  ur5_2f85_main.urdf.xacro  ur5_2f85_ros2_control.xacro  ur5_macro.xacro  ur5_ros2_control.xacro
